--- a/qr-code-component-main/qr-code-component-main/index.html
+++ b/qr-code-component-main/qr-code-component-main/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,14 +15,23 @@
   </style>
 </head>
 <body>
+<div class="container">
+<div class="card" style="width: 18rem; margin: auto;">
+  <img src="images/image-qr-code.png">
+  <div class="card-body">
+    <h5 class="card-title">  Improve your front-end skills by building projects
 
-  Improve your front-end skills by building projects
+  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h5>
+    <p class="card-text">An example card</p>
+    <a href="#">Link that goes nowhere yet</a>
+  </div>
+</div>
+</div>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Eric C. Morgan</a>.
   </div>
 </body>
 </html>
