--- a/qr-code-component-main/qr-code-component-main/index.html
+++ b/qr-code-component-main/qr-code-component-main/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-<div class="container" id="wrapper">
-<div class="card" style="width: 18rem; margin: auto;">
-  <img src="images/image-qr-code.png">
-  <div class="card-body">
-    <h5 class="card-title">  Improve your front-end skills by building projects
+  <div class="container" id="wrapper">
+    <div class="card text-center" style="width: 18rem; margin: auto; padding: 10px;">
+      <img class="card-img-top" src="images/image-qr-code.png">
+      <div class="card-body">
+        <h5 class="card-title"> Improve your front-end skills by building projects</h5>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h5>
-    <p class="card-text">An example card</p>
-    <a href="#">Link that goes nowhere yet</a>
+        <h6 class="card-text text-muted">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h6>
+      </div>
+    </div>
   </div>
-</div>
-</div>
 
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Eric C. Morgan</a>.
   </div>
 </body>
+
 </html>
